# he_ideal

./: AGENTS.md  README.md  pyproject.toml
benchmarks/ckks_operator_benchmarks/: example_openfhe_profile.csv  example_openfhe_profile_bootstrap.csv  example_openfhe_profile_bootstrap.metadata.json  example_seal_profile.csv  example_seal_profile.metadata.json  example_seal_profile_bootstrap.csv  example_seal_profile_bootstrap.metadata.json
benchmarks/plaintext_approx_benchmarks/: baseline.md  distilbert_sst2_baseline.py
configs/approximations/: gelu_candidates.yaml  layernorm_candidates.yaml  mvp_candidates.yaml  softmax_candidates.yaml
configs/ckks/: openfhe_seal_profiled.yaml  openfhe_seal_profiled_bootstrap.yaml  seal_profiled.yaml  seal_profiled_bootstrap.yaml  static_ckks_128.yaml
configs/datasets/: sst2.yaml
configs/deployment/: distilbert_sst2_openfhe.yaml
configs/experiments/: bert_tiny_sst2.yaml  bert_tiny_sst2_all_nonlinear.yaml  bert_tiny_sst2_softmax.yaml  distilbert_sst2.yaml  distilbert_sst2_all_nonlinear.yaml  distilbert_sst2_all_nonlinear_he.yaml  distilbert_sst2_all_nonlinear_he_seal_profiled.yaml  distilbert_sst2_all_nonlinear_he_seal_profiled_bootstrap.yaml  distilbert_sst2_all_nonlinear_he_static_baseline.yaml  distilbert_sst2_softmax.yaml
configs/he_backend/: openfhe_local.yaml
configs/models/: bert_tiny.yaml  distilbert_sst2.yaml
configs/schedules/: README.md
docs/: architecture.md  experiment_protocol.md  next_stage_improvements.md  project_full_explanation.md  project_structure.md  schedule_format.md
native/openfhe_runner/: CMakeLists.txt
native/openfhe_runner/src/: main.cpp
scripts/: build_openfhe_runner.sh  install_openfhe.sh
src/hetune/: __init__.py  __main__.py  cli.py
(+286 files in other folders)
